# auto-round

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_CN.md  CLAUDE.md  CLAUDE_CN.md  MANIFEST.in  MIXBIT_README.md  README.md  README_CN.md  _smoke_device.py  bench_triton_matmul.py  benchmark_both.py  claude_CN.md  cursor_user_interface_features_and_prom.md  eval_llama_new_9.sh  fp8_res_ada.pth  launch_autoround_flux_mxfp4_rtn_dual_gpu.sh  learn.py  main_tst.py  main_tst_2.py  modeling_deepseek.py  performance_ut.sh  profile_rss_per_block.py  pyproject.toml  q2_autoround_baseline.sh  q2_gguf_search_no_tune copy.sh  q2_k_s_sensitive.sh  q2_test_notune_flow.sh  q2_test_search_no_tune.sh  q3_autoround_baseline.sh  q4_auroround_baseline.sh  q4_autoround_baseline.sh  q4_choice.sh  q4_k_s.sh  q4_test_search_no_tune.sh  qbits_backend_demo.py  quantize_wan22_ti2v.py  requirements-cpu.txt  requirements-gpu.txt  (+17 more)
.azure-pipelines/: ark-unit-test.yml  build-auto-round-lib.yml  code-scan.yml  compatibility-test.yml  license_template.txt  nightly-test-xpu.yml  nightly-test.yml  performance-test.yaml  unit-test-cuda.yml  unit-test-hpu.yml  unit-test-xpu.yml  unit-test.yml  weekly-test-cuda.yml
.claude/: settings.json
.github/: copilot-instructions.md  pull_request_template.md
.history/: 1_20250706222831.py  1_20250706222843.py  1_20250706222858.py  q2_k_20250626022839.sh  q2_k_20250626022852.sh  q2_k_s_20250725054743.sh  q2_k_s_20250727220808.sh  q2_k_s_20250727221149.sh  q2_k_s_20250727221252.sh  q2_k_s_20250727221330.sh  q2_k_s_20250727222203.sh  q2_k_s_20250727222226.sh  q2_k_s_20250727222315.sh  q2_k_s_20250727222621.sh  q2_k_s_20250727235359.sh  q2_k_s_20250728010156.sh  q2_k_s_20250728034422.sh  q2_k_s_20250728044535.sh  q2_k_s_20250728044559.sh  q2_k_s_20250728103747.sh  q2_k_s_20250728104051.sh  q2_k_s_20250728112556.sh  q2_k_s_sensitive_20250729011239.sh  q4_auroround_baseline_20250617032842.sh  q4_auroround_baseline_20250704034120.sh  q4_auroround_baseline_20250704034207.sh  q4_auroround_baseline_20250704034336.sh  q4_auroround_baseline_20250704034355.sh  q4_auroround_baseline_20250704062238.sh  q4_choice_20250706103539.sh  q4_k_m_20250727222711.sh  (+26 more)
auto_round_extension/ark/auto_round_kernel/: CMakeLists.txt  SAGE_ATTENTION_NOTE.md  __init__.py  ark.cpp  ark_simulator.cpp  flux_block_profile_compare_dense_vs_sparse_topk0.1_2048x2048_t0.md  flux_sparse_patch.py  kernel_build.bat  qlinear.py  run_flux.py  run_spa.sh  run_wan.py  sage_fp8_kernel_instantiation.cpp.in  sdpa.cpp  sdpa_fp8.cpp  sdpa_generation.cmake  sdpa_kernel_declarations.hpp.in  sdpa_kernel_instantiation.cpp.in  sdpa_sparse.cpp  sdpa_sparse_dev.cpp  sparge_preprocess_triton.py  sparge_preprocess_triton_cuda_port.py  sparse_attention.py  torch_sdpa_patch.py  triton_sparse_attention_xpu.py  utils.py  version.py  wan_sparse_patch.py  xpu_loader.py
auto_round_extension/ark/auto_round_kernel/bestla/: .clang-format  CMakeLists.txt
auto_round_extension/ark/auto_round_kernel/bestla/bestla/: bestla.h  bestla_epilogue.h  bestla_gemm.h  bestla_jit.h  bestla_prologue_a.h  bestla_prologue_b.h  bestla_wrapper.h  kernel_jit.h  kernel_ref.h  kernel_wrapper.h
auto_round_extension/ark/auto_round_kernel/bestla/bestla/sycl/: sycl_epilogue.h  sycl_prologue_a.h  sycl_prologue_b.h  sycl_storage.h
auto_round_extension/ark/auto_round_kernel/bestla/bestla/ut/: bestla_parallel.cpp  bestla_prologue_b.cpp  bestla_ut.h  bestla_wrapper.cpp  sycl_gemm.cpp  sycl_tla_flash_attn_decode_bench.cpp  sycl_tla_flash_attn_prefill_bench.cpp
auto_round_extension/ark/auto_round_kernel/compat/include/oneapi/mkl/rng/: device.hpp
auto_round_extension/ark/auto_round_kernel/docs/: ARK_XPU_KERNEL_BKC.md  PV_MICRO_MODE_RESULTS_20260703.md  PV_ONLY_REALISH_PROFILE_20260703.md  README.md  SAGE_MAINLOOP_BODY_DIAGRAM.html  SPARGE_ARK_XPU_INTEGRATION_PLAN.md  SPARGE_PREPROCESS_PORT_PLAN.md  SPARSE_ATTN_CLEAN_BRANCH.md  SPARSE_DEV_FAST_BUILD_20260703.md  SPARSE_FAST_VS_SLOW_REPROFILE_20260703.md  SPARSE_HALFWIDTH_FULL_KERNEL_BENCH_20260704.md  SPARSE_KERNEL_BENCH_PLAN.md  SPARSE_PHASE_ISOLATION_REPROFILE_20260703.md  SPARSE_PHASE_SPLIT_RESULTS_20260703.md  SPARSE_PREFETCH_CONFIG_AUDIT_20260703.md  SPARSE_PREFETCH_NOTES.md  SPARSE_PV_LIVE_STATE_REDUCTION_PLAN_20260704.md  SPARSE_QK_ONLY_ISOLATION_IMPL_20260703.md  SPARSE_QTILE256_ROW64K_COMPARE_20260706.md  SPARSE_QUERY_TILE_256_20260704.md  SPARSE_SAGE_CAUSAL_PREFILL_PLAN.md  SPARSE_SAGE_DECODE_PLAN.md  SPARSE_SAGE_KERNEL_FIX_PLAN.md  SPARSE_SAGE_KERNEL_STATUS.md  SPARSE_SAGE_PREFILL_PARTIAL_E2E_PLAN.md  SPARSE_SAGE_ROW_LINEAR_PLAN.md  SPARSE_TOPK_BENCH_PLAN.md  WAN_SPARSE_ATTENTION_PLAN.md  flux_block_profile_summary_2048x2048_joint0.md
auto_round_extension/ark/auto_round_kernel/patches/: apply_patch.cmake  sycl_tla_fix_subbyte_reorder_recursion.patch
auto_round_extension/ark/auto_round_kernel/wrapper/include/: cpu_wrapper.hpp  dnnl_wrapper.hpp  sage_fp8_api.hpp  sycl_s8_wrapper.hpp  sycl_tla_common.hpp  sycl_tla_dense_gemm.hpp  sycl_tla_moe.hpp  sycl_tla_moe_decode.hpp  sycl_tla_moe_dequant.hpp  sycl_tla_moe_mixed.hpp  sycl_tla_moe_prefill_fp8_dpas.hpp  sycl_tla_moe_prefill_fp8_native.hpp  sycl_tla_moe_prefill_fused.hpp  sycl_tla_moe_prefill_int_dpas.hpp  sycl_tla_moe_prefill_s2_dpas.hpp  sycl_tla_moe_prefill_s4_dpas.hpp  sycl_tla_s8_gemm.hpp  sycl_tla_sdpa.hpp  sycl_tla_sdpa_dense.hpp  sycl_tla_sdpa_sparse.hpp  sycl_tla_wrapper.hpp  utils.hpp  xpu_wrapper.hpp
auto_round_extension/ark/auto_round_kernel/wrapper/include/stla/: sage_fp8_preprocess.hpp  xe_fmha_fwd_epilogue_compat.hpp  xe_sage_fp8_fwd_kernel.hpp  xe_sage_fp8_fwd_mainloop.hpp  xe_sage_fwd_kernel.hpp  xe_sagev1_fwd_mainloop.hpp  xe_sdpa_fwd_mainloop.hpp  xe_sparse_fmha_fwd_epilogue.hpp  xe_sparse_sage_fwd_kernel.hpp  xe_sparse_sagev1_fwd_mainloop.hpp
auto_round_extension/ark/auto_round_kernel/wrapper/test/: bench_sparse_kernel.cpp  common.hpp  test_gemm.hpp  test_main.cpp  test_quant.hpp  test_sage_sparse_prefill_e2e.py  test_sdpa.hpp  test_sparge_decode_topk_e2e.py  test_sparge_preprocess_topk_e2e.py  test_triton_sparse_prefill_e2e.py
(+2036 files in other folders)
