[metadata]
license_files =
   LICENSE
   third-party-programs.txt

[options.entry_points]
console_scripts =
    auto_round = auto_round.__main__:run
    auto-round = auto_round.__main__:run
    auto_round_eval = auto_round.__main__:run_eval
    auto-round-eval = auto_round.__main__:run_eval
    auto_round_mllm = auto_round.__main__:run_mllm
    auto-round-mllm = auto_round.__main__:run_mllm
    auto-round-rtn = auto_round.__main__:run_rtn
    auto_round_rtn = auto_round.__main__:run_rtn
    auto-round-opt-rtn = auto_round.__main__:run_opt_rtn
    auto_round_opt_rtn = auto_round.__main__:run_opt_rtn
    auto-round-best = auto_round.__main__:run_best
    auto_round_best = auto_round.__main__:run_best
    auto-round-light = auto_round.__main__:run_light
    auto_round_light = auto_round.__main__:run_light
